# ai-driven-soc

./: .cursorrules  .env.production.template  .gitignore  .pre-commit-config.yaml  A2A_IMPLEMENTATION_SUMMARY.md  A2UI_DEMO_RESULTS.md  A2UI_IMPLEMENTATION_SUMMARY.md  A2UI_QUICKSTART.md  AESMOTE- Pembelajaran Penguatan Adversarial dengan SMOTE untuk Deteksi Anomali.md  AI_LEARNING_MODE_ACTIVATION_SUCCESS.md  AI_MODEL_TRAINING_DASHBOARD_ANALYSIS.md  AI_MODEL_TRAINING_DOCUMENTATION.md  AI_SOC_Customer_Integration_Guide.docx  AI_TRAINING_FIXED_SUCCESS.md  AI_TRAINING_IMPACT_ANALYSIS.md  AI_TRAINING_REALITY_CHECK.md  ALERT_REVIEW_ML_LLM_STATUS.md  ALL_TAA_SERVICES_KILLED.md  Architecture_Multi_Agent_System_Anomaly_Podium.txt  BIGQUERY_ERROR_RESOLVED.md  BIGQUERY_KPI_IMPLEMENTATION.md  BIGQUERY_PHASE1_GUIDE.md  CLASS_IMBALANCE_ANALYSIS.md  CLA_66_MODELS_DETAILED_ANALYSIS.md  CLA_COMPREHENSIVE_DOCUMENTATION.docx  CLA_COMPREHENSIVE_DOCUMENTATION.md  CLA_Documentation.docx  CLA_ENHANCEMENTS_SUMMARY.md  CLA_ENHANCEMENT_STATUS.md  CLA_SERVICE_STATUS.docx  CLA_SERVICE_STATUS.md  COMPARISON_SUMMARY.md  COMPREHENSIVE_DATA_SUCCESS_SUMMARY.md  CONTAINMENT_ACTIONS_TEST_RESULTS.md  COPY_PASTE_TO_SSH.sh  CRA_SOAR_INTEGRATION_GUIDE.md  CRA_SOAR_MCP_COMPLETE_SUMMARY.md  CREWAI_METABASE_SERVICES_DOCUMENTATION.md  CURRENT_RUNNING_SERVICES.md  CURRENT_SYSTEM_STATE_2025-10-02.docx  (+527 more)
.agents/: README.md  decisions.md  orchestrator_prompt.md  plan.md  progress.md  research.md  risks.md
.github/: PULL_REQUEST_TEMPLATE.md
Dashboard feedbacks/: Several errors in the dashboard implementation.docx
Deep Research/: Deep Research Plan.md  Deep Research.md.txt
Post Human SOC /: AI_Driven_SOC_Phase1_Validation_Summary.pptx  AI_Driven_SOC_Transformation_Roadmap_IOH.pptx  AI_Driven_SOC_Transformation_Roadmap_Visual_Edition.pptx  AI_Driven_SOC_Visual_Strategy_Snapshot.pptx  AI_SoC_Implementation_Playbook.md  Enhanced_SOC_Transformation_Presentation.pptx  Post_Human_SOC_to_AI_Driven_SOC_Implementation_Matrix.docx  Presenter-Guide-With-Talking-Points.md  SOC-Transformation-Enhanced-AI-Reasoning.html  SOC_PLATFORM_README.md  create_elaborated_presentation.py  requirements.txt  setup_soc_app.py  soc_glm_app.py  soc_glm_app_simple.py
Presentation Deck/: Continuous Learning Agent (CLA) - High Level Overview.pptx  Continuous_Learning_Agent_(CLA)_-_High_Level_Overview.pptx  GATRA: Indonesia's AI-Powered Cybersecurity Infrastructure.pptx
Quantum_Computing/: Quantum_Cloud_Comparison.xlsx
RL/: agent RFT.md
config/: asgard_config.json  cla_config.json  cra_soar_mcp_config.json  gatra_multitenant_config.json  hybrid_defense_config.json  production_cla_config.json  taa_a2a_config.json  taa_config.json  thor_config.json  valhalla_config.json
dashboards/: BIGQUERY_INTEGRATION_STATUS.md  BIGQUERY_SETUP_GUIDE.md  BIGQUERY_SUCCESS.md  DEPLOYMENT_GUIDE.md  INTEGRATION_SUMMARY.md  QUICK_START.md  README.md  bigquery_config.py  enhanced_soc_dashboard.py  orchestrator_dashboard.py  requirements.txt  run_dashboard.sh  setup_bigquery_integration.sh  streamlit_soc_dashboard.py
demo/: demo_simulation.py  run_all_demos.py
deploy/: AI_Dashboard_README.md  LangGraph_ADA_Dashboard_README.md  Quick_Deploy_Guide.md  Revamped_LangGraph_Dashboard_README.md  access_final_dashboard.sh  access_native_dashboard.sh  access_real_agent_dashboard.sh  access_simple_dashboard.sh  ai_dashboard_config.py  bigquery_client.py  check_bigquery_schema.py  clean_enterprise_dashboard.py  comprehensive_ai_agents_dashboard.py  comprehensive_ai_dashboard.py  continuous-learning-agent.py  deploy_langgraph_dashboard.sh  deploy_to_vm.sh  dual_theme_langgraph_dashboard.py  enterprise_grade_dashboard.py  fast_langgraph_dashboard.py  final_working_dashboard.py  fixed_langgraph_dashboard.py  hybrid_ada_dashboard.py  hybrid_ada_decision_engine.py  hybrid_ada_requirements.txt  langgraph_ada_dashboard.py  langgraph_dashboard_requirements.txt  native_streamlit_dashboard.py  premium_enterprise_dashboard.py  quick_dashboard.py  real_agent_monitoring_dashboard.py  real_ai_data_connector.py  real_ai_training_dashboard.py  requirements.txt  restart_native_dashboard.sh  revamped_langgraph_dashboard.py  simple_comprehensive_dashboard.py  simple_working_dashboard.py  test_bigquery_connection.py  working_simple_dashboard.py
deployment_package/: DEPLOYMENT_CHECKLIST.md  README.md
docs/: A2A_IMPLEMENTATION_SUMMARY.docx  A2UI_GATRA_SOC_IMPLEMENTATION.md  AI SOC platform upgrade.docx  AI_Driven_SOC_Multi_Agent_Workflow_Revamped.docx  CLA_ENHANCEMENTS_TI_BANDIT_RAG.md  DEMO_VIDEO_SCRIPT.md  DEPLOYMENT_RUNBOOK.docx  DEPLOYMENT_RUNBOOK.md  FINAL_SUMMARY.docx  FINAL_SUMMARY.md  FOUNDATION_DASHBOARD_V1.docx  FOUNDATION_DASHBOARD_V1.md  NEXT_ACTIONS_PLAN.docx  (+18 more)
orchestrator/: pyproject.toml
orchestrator/.agents/: plan.md  progress.md  research.md
orchestrator/proactive_security_orchestrator/: __init__.py  cli.py  scanner.py  utils.py
(+107 files in other folders)
