[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proactive-security-orchestrator"
version = "1.0.1"
description = "Unified security scanner orchestrator for AI-Driven SOC"
authors = [
    {name = "Raditio Ghifiardi", email = "ghifi@ioh.co.id"}
]
requires-python = ">=3.9"

dependencies = [
    "typer>=0.9.0",
    "rich==13.5.2",
    "structlog>=23.2.0",
    "PyYAML>=6.0",
]

[project.scripts]
security-scan = "proactive_security_orchestrator.cli:app"

[tool.setuptools]
packages = ["proactive_security_orchestrator"]
